# Sourcerer

./: .clang-format  CMakeLists.txt  README.md
src/: Sourcerer.cpp  directory_explorer.cpp  main.cpp
src/include/: Sourcerer.hpp  directory_explorer.hpp
